name:                fum2github
version:             0.1.0.0
synopsis:            Compare Futurice FUM and GitHub organization users
-- description:
homepage:            https://github.com/futurice/fum2github
license:             BSD3
license-file:        LICENSE
copyright:           Copyright © Futurice
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      library
  exposed-modules:     Fum2GitHub.Fum, Fum2GitHub.GitHub
  build-depends:       aeson,
                       base,
                       bytestring,
                       case-insensitive,
                       http-conduit,
                       http-types,
                       regex-compat,
                       text,
                       transformers,
                       transformers-compat,
                       unordered-containers,
                       vector
  default-language:    Haskell2010

executable fum2github
  hs-source-dirs:      executable
  main-is:             Main.hs
  build-depends:       base, fum2github, optparse-applicative
  default-language:    Haskell2010

Test-Suite hspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       aeson,
                       base,
                       fum2github,
                       hspec
  default-language:    Haskell2010
