name:                base64-bytestring-type
version:             0.0.0.0
synopsis:            A package providing a type to help serialising of arbitrary BaseStrings
description:         There is a lot to do.
homepage:            https://github.com/futurice/fum2github
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus
maintainer:          oleg.grenrus@iki.fi
copyright:           (c) 2015 Futurice
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.ByteString.Base64.Type
  build-depends:       base >=4.7 && <4.9, aeson, bytestring, base64-bytestring, text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
