name:                fum2github
version:             0.0.0.0
synopsis:            Compare Futurice FUM and GitHub organization users
description:         Currently we print Github users not in FUM
homepage:            https://github.com/futurice/fum2github
license:             BSD3
license-file:        LICENSE
copyright:           Copyright © 2015 Futurice
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      library
  exposed-modules:     Fum2GitHub.Compare,
                       Fum2GitHub.Fum,
                       Fum2GitHub.Types
  build-depends:       aeson,
                       base,
                       bytestring,
                       containers,
                       exceptions,
                       extra,
                       futurice-extra,
                       github-fxtra,
                       monad-http,
                       monad-http-fxtra,
                       monad-logger,
                       text
  default-language:    Haskell2010
  ghc-options:         -Wall

executable checker
  hs-source-dirs:      checker
  main-is:             Main.hs
  build-depends:       base,
                       deepseq,
                       fum2github,
                       futurice-extra,
                       github-fxtra,
                       lens,
                       monad-http,
                       monad-http-fxtra,
                       monad-logger,
                       swarm,
                       text,
                       transformers
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

test-suite hspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       aeson,
                       base,
                       fum2github,
                       github-fxtra,
                       hspec
  default-language:    Haskell2010
  ghc-options:         -Wall

