name:                futurice-extra
version:             0.0.0.0
synopsis:            Futurice extras
description:         Random collections of extras
homepage:            https://github.com/futurice/fum2github
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus
maintainer:          oleg.grenrus@iki.fi
copyright:           (c) 2015 Futurice
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Catch.Fxtra,
                       Control.Monad.Trans.Except.Fxtra,
                       Options.Applicative.Fxtra,
                       System.IO.Fxtra
  other-extensions:    TypeFamilies,
                       DeriveDataTypeable,
                       DeriveGeneric,
                       FlexibleContexts,
                       OverloadedStrings,
                       TemplateHaskell,
                       Safe
  build-depends:       base >=4.7 && <4.9,
                       SHA,
                       aeson,
                       bifunctors,
                       bytestring,
                       case-insensitive,
                       deepseq,
                       directory,
                       exceptions,
                       filepath,
                       optparse-applicative,
                       text,
                       transformers,
                       transformers-compat
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
