name:                github-fxtra
version:             0.0.0.0
synopsis:            Github Futurice extras
description:         Extra functionality on top of http://hackage.haskell.org/package/github
homepage:            https://github.com/futurice/fum2github
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2015 Futurice
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Github.Fxtra
  other-extensions:    OverloadedStrings, DeriveDataTypeable, DeriveGeneric
  build-depends:       base >=4.7 && <4.9,
                       bytestring,
                       case-insensitive,
                       deepseq,
                       exceptions,
                       github,
                       futurice-extra,
                       http-types,
                       monad-http,
                       monad-http-fxtra,
                       monad-logger,
                       http-client,
                       regex-compat,
                       text,
                       aeson-extra
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
