name:                monad-http
version:             0.0.0.0
synopsis:            A class of monads which can do http requests.
description:         TBD
homepage:            https://github.com/futurice/fum2github
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2015 Futurice
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Caching
                       Control.Monad.HTTP
                       Control.Monad.Caching.ResponseMeta
                       Network.HTTP.Client.Fxtra
  other-extensions:    TypeFamilies, DeriveDataTypeable, DeriveGeneric, FlexibleContexts, OverloadedStrings
  build-depends:       base >=4.7 && <4.9,
                       SHA,
                       QuickCheck,
                       aeson,
                       bytestring,
                       base64-bytestring-type,
                       case-insensitive,
                       cereal,
                       deepseq,
                       directory,
                       exceptions,
                       monad-logger,
                       filepath,
                       futurice-extra,
                       http-client,
                       http-client-tls,
                       http-types,
                       text,
                       transformers,
                       transformers-compat
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base,
                       aeson,
                       cereal,
                       monad-http,
                       tasty,
                       tasty-quickcheck
  default-language:    Haskell2010
  ghc-options:         -Wall
