name:                swarm
version:             0.0.0.0
synopsis:            Parallel IO work
description:         A parallel 'traverse'.
homepage:            https://github.com/futurice/fum2github
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2015 Oleg Grenrus
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Swarm
  build-depends:       base >=4.7 && <4.9, deepseq, stm, stm-chans
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
